--- a/css/style.css
+++ b/css/style.css
@@ -412,7 +412,7 @@ footer img{
     grid-row-end: 8; 
 }
 
-.näsa{
+.nasa{
     grid-column-start: 3;
     grid-column-end: 4;
     grid-row-start:7;  
@@ -845,7 +845,7 @@ p{
     grid-row-end: 6; 
 }
 
-.näsa{
+.nasa{
     grid-column-start: 3;
     grid-column-end: 4;
     grid-row-start:4;  
